# greedo

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  app.py  requirements.txt
.github/workflows/: deploy-dev.yml  deploy-prod.yml
ansible/: ansible.cfg  deploy.yml
ansible/inventory/: dev.yml  prod.yml
ansible/templates/: gree-do.env.j2  gree-do.service.j2
conf/: README.md
conf/dev/nginx/sites-available/: 17-gree-do-nginx.conf
conf/prod/nginx/sites-available/: 17-gree-do-nginx.conf
conf/prod/nginx/sites-enabled/: 17-gree-do-nginx.conf
holonet-stamp/: ARCHITECTURE.md  OPERATIONS.md  README.md  __init__.py  filelist.txt  holonet_handoff_notes.txt  holonet_stamp_module.py  pyproject.toml  requirements.txt  sw_time.py  test_holonet_stamp.py  test_sw_time.py
static/css/: main.css
static/js/: main.js
templates/: about.html  docs.html  health.html  index.html  redoc.html
