[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holonet-stamp"
version = "0.1.0"
description = "Holonet timestamp CLI with Star Wars time (SWET / CGT) support"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "You", email = "you@example.com" }
]

[project.scripts]
holonet-stamp = "holonet_stamp:main_cli"

[tool.setuptools]
py-modules = [
  "sw_time",
  "holonet_stamp"
]

